# Aikido-Security-Analysis-Platform

./: .gitignore  .pre-commit-hooks.yaml  AUDIT_COMPARISON.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  mutants.toml
crates/aikido-cli/: Cargo.toml
crates/aikido-cli/src/: main.rs
crates/aikido-cli/tests/: cli_e2e_test.rs
crates/aikido-core/: Cargo.toml
crates/aikido-core/benches/: analysis_bench.rs
crates/aikido-core/src/: accuracy.rs  annotations.rs  ast_walker.rs  baseline.rs  benchmark.rs  body_analysis.rs  call_graph.rs  cardano_model.rs  cfg.rs  compliance.rs  config.rs  cross_module.rs  csv.rs  cwc.rs  dataflow.rs  delegation.rs  evidence.rs  fuzz_lane.rs  gitlab.rs  html.rs  interactive.rs  invariant_spec.rs  ir.rs  lib.rs  lsp.rs  markdown.rs  path_analysis.rs  pdf.rs  plugin.rs  project.rs  protocol_patterns.rs  report.rs  reviewdog.rs  sarif.rs  scorecard.rs  smt.rs  ssa.rs  state_machine.rs  stdlib_model.rs  suppression.rs  (+6 more)
crates/aikido-core/src/detector/: arbitrary_datum_in_output.rs  cheap_spam_vulnerability.rs  cross_validator_gap.rs  datum_field_bounds.rs  datum_tampering_risk.rs  dead_branch_detection.rs  dead_code_path.rs  division_by_zero_risk.rs  double_satisfaction.rs  duplicate_asset_name_risk.rs  empty_handler_body.rs  excessive_validator_params.rs  fail_only_redeemer_branch.rs  fee_calculation_unchecked.rs  hardcoded_addresses.rs  identity_token_forgery.rs  incomplete_burn_flow.rs  incomplete_value_extraction.rs  insufficient_staking_control.rs  integer_underflow_risk.rs  invariant_violation.rs  magic_numbers.rs  missing_burn_verification.rs  missing_datum_field_validation.rs  missing_datum_in_script_output.rs  missing_input_credential_check.rs  missing_min_ada_check.rs  missing_minting_policy_check.rs  missing_protocol_token.rs  missing_redeemer_validation.rs  missing_signature_check.rs  missing_state_update.rs  missing_token_burn.rs  missing_utxo_authentication.rs  missing_validity_range.rs  mod.rs  multi_asset_comparison_bypass.rs  (+40 more)
crates/aikido-core/tests/: benchmark_test.rs  fixture_test.rs  proptest_test.proptest-regressions  proptest_test.rs  readme_consistency_test.rs  sentaku_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_detectors.rs  fuzz_suppression.rs
(+223 files in other folders)
