[workspace]
members = ["crates/aikido-core", "crates/aikido-cli"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/Bajuzjefe/aikido"
homepage = "https://github.com/Bajuzjefe/aikido"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
