[package]
name = "aikido-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aikido-core = { path = "../crates/aikido-core" }
serde_json = "1"
toml = "0.8"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_detectors"
path = "fuzz_targets/fuzz_detectors.rs"
doc = false

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
doc = false

[[bin]]
name = "fuzz_suppression"
path = "fuzz_targets/fuzz_suppression.rs"
doc = false
